[package]
name = "cheap8_sdl"
version = "0.1.0"
authors = ["Zacharie Tevaearai <zacharietevaearai@epfl.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
sdl2 = { version = "0.34.5", features = ["gfx"] }
structopt = "0.3.23"
cheap8 = {path = "../"}
