[package]
name = "cheap8_sdl"
version = "0.1.0"
authors = ["Zacharie Tevaearai <zacharietevaearai@epfl.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
clap = { version = "3.2.22", features = ["derive"]}
sdl2 = { version = "0.35.2", features = ["gfx"] }
cheap8_core = {path = "../cheap8_core"}
